opam-version: "2.0"
maintainer: "igor@ahrefs.com"
authors: "Ahrefs <github@ahrefs.com>"
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
homepage: "https://github.com/ahrefs/devkit"
dev-repo: "git+https://github.com/ahrefs/devkit.git"
bug-reports: "https://github.com/ahrefs/devkit/issues"
synopsis: "Development kit - general purpose library"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install" "@runtest"{with-test} "@doc"{with-doc}]
]
depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {>= "2.0"}
  ("extlib" {>= "1.7.0"} | "extlib-compat" {>= "1.7.0"})
  "ounit2"
  "camlzip"
  "libevent" {>= "0.8.0"}
  "ocurl" {>= "0.7.2"}
  "ocamlnet"
  "pcre"
  "extunix" {>= "0.1.4"}
  "lwt" {>= "2.5.2"}
  "lwt_ppx"
  "base-bytes"
  "base-unix"
  "base-threads"
  "stdlib-shims"
  "yojson" {>= "1.6.0"}
  "odoc" {with-doc}
]
depopts: [
  "gperftools"
  "jemalloc"
]
conflicts: [
  "jemalloc" {< "0.2"}
  "ocaml-option-32bit"
]
