opam-version: "2.0"
maintainer: "igor@ahrefs.com"
authors: "Ahrefs <github@ahrefs.com>"
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/ahrefs/devkit"
dev-repo: "git+https://github.com/ahrefs/devkit.git"
bug-reports: "https://github.com/ahrefs/devkit/issues"
synopsis: "Development kit - general purpose library"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install" "@runtest"{with-test} "@doc"{with-doc}]
]
depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {>= "2.0"}
  ("extlib" {>= "1.7.1"} | "extlib-compat" {>= "1.7.1"})
  "ounit2"
  "camlzip"
  "libevent" {>= "0.8.0"}
  "curl" {>= "0.10.0"}
  "curl_lwt"
  "pcre2" {>= "8.0.3"}
  "trace" {>= "0.10" & < "0.11"}
  "extunix" {>= "0.1.4"}
  "lwt" {>= "6.0.0"}
  "lwt_ppx"
  "base-bytes"
  "base-unix"
  "base-threads"
  "stdlib-shims"
  "yojson" {>= "1.6.0"}
  "odoc" {with-doc}
]
depopts: [
  "gperftools"
  "jemalloc"
  "opentelemetry"
]
conflicts: [
  "jemalloc" {< "0.2"}
  "opentelemetry" {< "0.6"}
]
available: arch != "arm32" & arch != "x86_32"
