(library
  (public_name devkit)
  (libraries
    (re_export devkit_core))
  (modules devkit))

(library
  (name devkit_core)
  (public_name devkit.core)
  (libraries
    threads.posix ; must come first
    curl
    curl.lwt
    extlib
    extunix
    libevent
    lwt
    lwt.unix
    netstring
    pcre
    stdlib-shims
    ambient-context
    trace
    opentelemetry
    yojson
    zip)
  (modules :standard \
           devkit
           stage_merge
           memory_gperftools
           memory_jemalloc
           test
           test_httpev)
  (preprocess
    (per_module
      ((pps lwt_ppx)
       httpev
       logstash
       lwt_flag
       lwt_util
       parallel
       web))
  ))

(library
  (name devkit_gperftools)
  (public_name devkit.gperftools)
  (optional)
  (libraries
    devkit_core
    gperftools)
  (modules memory_gperftools))

(library
  (name devkit_jemalloc)
  (public_name devkit.jemalloc)
  (optional)
  (libraries
    devkit_core
    jemalloc)
  (modules memory_jemalloc))

(executable
  (name test)
  (libraries devkit extlib extunix libevent netstring ounit2 yojson)
  (modules test test_httpev))

(rule
  (alias runtest)
  (action (run ./test.exe)))
